--- a/gwfish_tutorial.ipynb
+++ b/gwfish_tutorial.ipynb
@@ -5,12 +5,11 @@
    "id": "3d714935",
    "metadata": {},
    "source": [
-    "![alt text](<https://www.et-gw.eu/images/et-new-logo.png>)\n",
+    "<p align=\"center\">\n",
+    "  <img src=\"gwfish-1.png\" width=\"200\" title=\"Logo\">\n",
+    "</p>\n",
     "\n",
-    "# XIII ET Symposium: Hackathon Session\n",
-    "\n",
-    "\n",
-    "### GWFish Tutorial: a brief guide for your first steps in using GWFish"
+    "## A brief guide for your first steps in using GWFish"
    ]
   },
   {
@@ -1141,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cec1b7ed",
+   "id": "2125678b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1149,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8a13705",
+   "id": "366e0625",
    "metadata": {},
    "outputs": [],
    "source": []
