changed path to psds when in colab

--- a/gwfish_tutorial.ipynb
+++ b/gwfish_tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "3d714935",
    "metadata": {},
    "source": [
-    "<p align=\"center\">\n",
+    "<p align=\"left\">\n",
     "  <img src=\"gwfish-1.png\" width=\"200\" title=\"Logo\">\n",
     "</p>\n",
     "\n",
@@ -87,7 +87,10 @@
     "import os\n",
     "from astropy.cosmology import Planck18\n",
     "\n",
-    "GWFish_path = 'GWFish/'"
+    "GWFish_path = 'GWFish/'\n",
+    "\n",
+    "### When in Colab use instead:\n",
+    "#GWFish_path = '/usr/local/lib/python3.10/dist-packages/GWFish/'"
    ]
   },
   {
@@ -1140,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2125678b",
+   "id": "a5173e35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1148,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366e0625",
+   "id": "4f311dd5",
    "metadata": {},
    "outputs": [],
    "source": []
