added google colab tutorial extension

--- a/gwfish_tutorial.ipynb
+++ b/gwfish_tutorial.ipynb
@@ -11,6 +11,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fb8a680",
+   "metadata": {},
+   "source": [
+    "##  Settings for working in GoogleColab\n",
+    "Uncomment the following lines:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38de449e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#! pip install -q git+https://github.com/janosch314/GWFish.git\n",
+    "#! pip install -q lalsuite\n",
+    "#! pip install -q corner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "639a47c3",
+   "metadata": {},
+   "source": [
+    "**Note**: in Google Colab remember to **restart the kernel runtime** after installation: `runtime -> restart session`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73abd866",
    "metadata": {},
    "source": [
