removed get_SNR_components, included functionality in geT_snr

--- a/TutorialTimeFrequencySeries.ipynb
+++ b/TutorialTimeFrequencySeries.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5103/3960507349.py:20: UserWarning: Attempt to set non-positive xlim on a log-scaled axis will be ignored.\n",
+      "/tmp/ipykernel_9162/3960507349.py:20: UserWarning: Attempt to set non-positive xlim on a log-scaled axis will be ignored.\n",
       "  ax2.set_xlim(min(freq_range), max(freq_range))\n"
      ]
     },
@@ -176,16 +176,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. We start by selecting a detector"
+    "1. We start by selecting detectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "detector = detection.Detector(\"ET\")"
+    "detector = detection.Detector(\"ET\") #used for the PSD later\n",
+    "detectors = ['ET', 'LHO', 'VIR'] #Justput only one detector in the array if you want to use only one detector\n",
+    "network = detection.Network(detector_ids = detectors)"
    ]
   },
   {
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -297,19 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SNR : 75.09\n"
+      "SNR : 76.26\n"
      ]
     }
    ],
    "source": [
-    "component_SNRs = util.get_SNR_from_strains(f_in, hp_f_10kpc, hc_f_10kpc, detector, params)\n",
+    "component_SNRs = util.get_SNR_from_strains(f_in, hp_f_10kpc, hc_f_10kpc, network, params)\n",
     "out_SNR = np.sqrt(np.sum(component_SNRs**2))\n",
     "print(f\"SNR : {out_SNR:.2f}\")"
    ]
@@ -330,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SNR : 75.09\n"
+      "SNR : 76.26\n"
      ]
     }
    ],
@@ -349,7 +351,7 @@
     "\n",
     "f_in = freq_range[:, None] / (1+redshift) #redshift the frequency, the signal in itself should not change just shift\n",
     "\n",
-    "component_SNRs = util.get_SNR_from_strains(f_in, hp_f_10kpc, hc_f_10kpc, detector, params)\n",
+    "component_SNRs = util.get_SNR_from_strains(f_in, hp_f_10kpc, hc_f_10kpc, network, params)\n",
     "out_SNR = np.sqrt(np.sum(component_SNRs**2))\n",
     "print(f\"SNR : {out_SNR:.2f}\")"
    ]
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,8 +373,8 @@
      "output_type": "stream",
      "text": [
       "Redshift @ 20 Mpc : 4.50e-03 redshift\n",
-      "SNR no z : 3.755e-02\n",
-      "SNR z : 3.750e-02\n",
+      "SNR no z : 3.813e-02\n",
+      "SNR z : 3.809e-02\n",
       "SNR ratio : 1.00119\n"
      ]
     }
@@ -388,8 +390,8 @@
     "f_in_noz = freq_range[:, None]\n",
     "f_in_z = freq_range[:, None] / (1+redshift)\n",
     "\n",
-    "component_SNRs_noz = util.get_SNR_from_strains(f_in_noz, hp_f_20Mpc, hc_f_20Mpc, detector, params)\n",
-    "component_SNRs_z = util.get_SNR_from_strains(f_in_z, hp_f_20Mpc, hc_f_20Mpc, detector, params)\n",
+    "component_SNRs_noz = util.get_SNR_from_strains(f_in_noz, hp_f_20Mpc, hc_f_20Mpc, network, params)\n",
+    "component_SNRs_z = util.get_SNR_from_strains(f_in_z, hp_f_20Mpc, hc_f_20Mpc, network, params)\n",
     "\n",
     "out_SNR_noz = np.sqrt(np.sum(component_SNRs_noz**2))\n",
     "out_SNR_z = np.sqrt(np.sum(component_SNRs_z**2))\n",
@@ -418,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SNR : 74.39\n"
+      "SNR : 75.58\n"
      ]
     }
    ],
@@ -439,7 +441,7 @@
     "hp_f_masked = hp_f_10kpc[condition]\n",
     "hc_f_masked = hc_f_10kpc[condition]\n",
     "\n",
-    "component_SNRs = util.get_SNR_from_strains(f_masked, hp_f_masked, hc_f_masked, detector, params, long_wavelength_approx=False)\n",
+    "component_SNRs = util.get_SNR_from_strains(f_masked, hp_f_masked, hc_f_masked, network, params, long_wavelength_approx=False)\n",
     "out_SNR = np.sqrt(np.sum(component_SNRs**2))\n",
     "print(f\"SNR : {out_SNR:.2f}\")"
    ]
