added note on masses conventions in GWFish

--- a/gwfish_tutorial.ipynb
+++ b/gwfish_tutorial.ipynb
@@ -194,6 +194,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cad9b33c",
+   "metadata": {},
+   "source": [
+    "### **Note on mass conventions**\n",
+    "In `GWFish` the input masses can be passed in the following different combinations (the combination has to be the same when selecting the `fisher_params`):\n",
+    "- `chirp_mass` (in detector-frame and in [Msol]) and `mass_ratio` \n",
+    "- `chirp_mass_source` (in source-frame and in [Msol]) and `mass_ratio`\n",
+    "- `mass_1` and `mass_2`, both in detector-frame and in [Msol]\n",
+    "- `mass_1_source` and `mass_2_source`, both in source-frame and in [Msol]\n",
+    "\n",
+    "Pay attention that when masses are passed to `lal` they are **always** converted into `mass_1` and `mass_2` (in [kg]), as `lal` always takes masses in **detector frame**!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "41232d3c",
    "metadata": {},
    "source": [
