updated tutorial on priors

--- a/priors_tutorial.ipynb
+++ b/priors_tutorial.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "$$p(\\vec{\\theta}|s) \\propto \\pi(\\vec{\\theta}){\\mathcal{L}}(s|\\vec{\\theta})$$\n",
     "\n",
-    "The Fisher matrix analysis works in the assumption that when the signal to noise ratio (SNR) is sufficiently large, the likelihood is a highly peaked function and no priors are needed. However, this is rarely the case, as correlations may spread the likelihood and sampling from the multivariate Gaussian may leak outside the physical range of parameters. In the following tutorial we show how to incorporate prior information $\\pi(\\vec{\\theta})$ on top of the Fisher likelihood, with a sampling procedure that stays computationally efficient.\n",
+    "The Fisher matrix analysis works in the assumption that when the signal to noise ratio (SNR) is sufficiently large, the likelihood is a highly peaked function and no priors are needed. However, this is rarely the case, as correlations may spread the likelihood and sampling from the multivariate Gaussian may leak outside the physical range of parameters. \n",
+    "\n",
+    "> **In this tutorial, we show how to integrate prior information, $\\pi(\\vec{\\theta})$, into the Fisher likelihood while maintaining computational efficiency in the sampling process. Additionally, we offer insights into the comparative behavior of different prior choices.**\n",
     "\n",
     "The procedure is addressed in a second `GWFish` paper available on [arXiv](https://arxiv.org/abs/2404.16103). The usage of the code as for the paper's purposes can be found in this [repo](https://github.com/u-dupletsa/GWFish-meets-Priors)."
    ]
@@ -493,6 +495,21 @@
     "    'lower_prior_bound': 0.,\n",
     "    'upper_prior_bound': 2*np.pi\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to choose priors?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An in-depth look at priors: the case of masses\n",
+    "Choosing `chirp_mass` and `mass_ratio` parametrization offers a better outcome when doing the Fisher analysis, as they exhibit a more Gaussian behavior with respect to the `mass_1` and `mass_2` parametrization choice. It is customary, though, when it comes to prior to choose the "
    ]
   }
  ],
